# news-please-ng

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  lint.yml
k8s/base/: deployment.yaml  kustomization.yaml
newsplease/: NewsArticle.py  __init__.py  __main__.py  config.py  helper.py  news_article.py  single_crawler.py
newsplease/config/: config.cfg  sitelist.hjson
newsplease/crawler/: commoncrawl_crawler.py  commoncrawl_extractor.py  response_decoder.py  simple_crawler.py
newsplease/crawler/spiders/: gdelt_crawler.py  rss_crawler.py
newsplease/examples/: commoncrawl.py  downloadfromfile.py  downloadfromurl.py
newsplease/helper_classes/: class_loader.py  heuristics.py  parse_crawler.py  savepath_parser.py  url_extractor.py
newsplease/helper_classes/sub_classes/: heuristics_manager.py
newsplease/pipeline/: pipelines.py
newsplease/pipeline/extractor/: article_candidate.py  article_extractor.py  cleaner.py
newsplease/pipeline/extractor/comparer/: comparer.py  comparer_Language.py  comparer_author.py  comparer_date.py  comparer_description.py  comparer_language.py  comparer_text.py  comparer_title.py  comparer_topimage.py
newsplease/pipeline/extractor/extractors/: abstract_extractor.py  date_extractor.py  lang_detect_extractor.py  newspaper_extractor.py  readability_extractor.py
